<resources>
    <string name="app_name">Kacamata-Baca</string>
    <string name="catalogue">CATALOGUE</string>
    <string name="news">NEWS</string>
    <string name="img_pro">imgPro</string>
    <string name="title">title</string>
    <string name="description">desription</string>
    <string name="proId">productId</string>
    <string name="input_news">Input News</string>
    <string name="content">Content</string>
    <string name="upload">Upload</string>
    <string name="choose_file">Choose file</string>
    <string name="home">Home</string>
    <string name="testimony">Testimony</string>
    <string name="cart">Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="price">Price</string>
    <string name="order">ORDER</string>
    <string name="save">Save</string>
    <string name="quantity">jumlah</string>
    <string name="note">Ukuran lensa R: L: add:</string>
    <string name="empty">empty</string>
    <string name="profile">PROFILE</string>
    <string name="update">Update</string>
    <string name="input_update_profile">INPUT/UPDATE PROFILE</string>
    <string name="name">Name :</string>
    <string name="address">Address :</string>
    <string name="phone">Phone :</string>
    <string name="delete_profile">Delete Profile</string>
    <string name="message_delete">Are you sure to delete?</string>
    <string name="delete">Delete</string>
    <string name="yes">yes</string>
    <string name="no">No</string>
    <string name="clear_cart">Clear</string>
    <string name="subtotal">subtotal</string>
    <string name="message_update">*/Untuk update Profile klik disini !!</string>
    <string name="welcome_space">SELAMAT DATANG DI TOKO KACAMATABACA</string>
    <string name="purchasing_order">ORDER PEMBELIAN</string>
    <string name="store_name">Toko Kacamata MARELLA</string>
    <string name="total">Total:</string>
    <string name="total_pay">Total bayar</string>
    <string name="ongkir">Ongkir</string>
    <string name="grand_total">Total bayar Rp</string>
    <string name="rekening">Pembayara ke Rekening BCA</string>
    <string name="no_rek">No.Rek : 4564963838</string>
    <string name="an_rek">a.n ANTONIUS RUDI SASANGKA</string>
    <string name="kacamatabaca">kacamatabaca</string>
    <string name="zero">0</string>
    <string name="rp">Rp</string>
    <string name="date">date</string>
    <string name="click_total_pay">TOTAL BAYAR</string>
    <string name="finish">SUDAH BAYAR</string>
    <string name="message_pay">Terimakasih sudah berbelanja.</string>
    <string name="message_send">Barang Anda akan segera dikirim</string>
    <string name="ongkir_free">Ongkir gratis</string>
    <string name="buy">BELI</string>
    <string name="read">Baca selengkapnya</string>
    <string name="testId">TestId</string>
    <string name="total_item">Total item:</string>
    <string name="edit_profile">EDIT PROFIL</string>
    <string name="payment">PEMBAYARAN</string>
</resources>