<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp">
    <ImageView
        android:id="@+id/img_pro"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginTop="6dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/img_pro"/>

    <TextView
        android:id="@+id/tv_proId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:maxLines="1"
        android:text="@string/proId"
        android:visibility="invisible"/>
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:text="@string/title"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        android:maxLines="1"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/tv_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:maxLines="1"
        android:text="@string/price"
        android:textColor="@color/colorBlack"
        android:layout_marginBottom="10dp"/>
    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:text="@string/description"
        android:maxLines="5"
        android:textColor="@color/colorBlack"
        android:layout_marginBottom="10dp"/>
    <Button
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:text="@string/buy"
        android:background="@drawable/btn_red"
        android:textColor="@color/colorWhite"
        android:layout_marginBottom="@dimen/vertical_margin"/>




</LinearLayout>