<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:textColor="@color/colorBlack"
        android:text="@string/title"
        android:maxLines="1"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:textColor="@color/colorBlack"
            android:text="@string/price"
            />
        <TextView
            android:id="@+id/tv_qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:textColor="@color/colorBlack"
            android:text="@string/quantity" />

        <TextView
            android:id="@+id/tv_subtotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:textColor="@color/colorBlack"
            android:text="@string/subtotal"/>
    </LinearLayout>









</LinearLayout>