<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/img_test"
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/img_pro"/>

    <TextView
        android:id="@+id/tv_testId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:text="@string/proId"
        android:visibility="invisible"
        android:textColor="@color/colorRed" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginBottom="10dp"
        android:maxLines="3"
        android:text="@string/description"
        android:textColor="@color/colorBlack" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_margin"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:textStyle="italic"
        android:textColor="@color/colorBlue"
        android:text="@string/read"
        android:layout_marginBottom="@dimen/vertical_margin"/>


</LinearLayout>