<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.cart.CartFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_marginBottom="6dp"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/purchasing_order"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:text="@string/store_name"/>
        <View
            android:layout_width="match_parent"
            android:background="@drawable/dash_line"
            android:layout_marginBottom="10dp"
            android:layerType="software"
            android:layout_height="5dp"/>
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginBottom="6dp"
            android:textColor="@color/colorBlack"
            android:text="@string/name"/>
        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginBottom="6dp"
            android:textColor="@color/colorBlack"
            android:text="@string/address"/>
        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginBottom="6dp"
            android:textColor="@color/colorBlack"
            android:text="@string/phone"/>
        <TextView
            android:id="@+id/tv_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginBottom="6dp"
            android:textStyle="italic"
            android:text="@string/date"/>

        <View
            android:layout_width="match_parent"
            android:background="@drawable/dash_line"
            android:layout_marginBottom="10dp"
            android:layerType="software"
            android:layout_height="5dp"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_order"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin"
            tools:listitem="@layout/item_cart" />
        <View
            android:layout_width="match_parent"
            android:background="@drawable/dash_line"
            android:layout_marginBottom="10dp"
            android:layerType="software"
            android:layout_height="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:textColor="@color/colorBlack"
                android:text="@string/total"/>
            <TextView
                android:id="@+id/tv_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:layout_marginEnd="30dp"
                android:textAlignment="viewEnd"
                android:textStyle="bold" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:textColor="@color/colorBlack"
            android:text="@string/total_item"/>

        <TextView
            android:id="@+id/tv_total_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="30dp"
            android:textAlignment="viewEnd"
            android:textStyle="bold" />

    </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textColor="@color/colorBlue"
            android:text="@string/ongkir_free"/>

        <View
            android:layout_width="match_parent"
            android:background="@drawable/dash_line"
            android:layout_marginBottom="10dp"
            android:layerType="software"
            android:layout_height="5dp"/>
        <LinearLayout
            android:id="@+id/lay_rek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/bca"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/horizontal_margin"
                android:contentDescription="@string/kacamatabaca"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:textColor="@color/colorBlack"
                    android:text="@string/rekening"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:textColor="@color/colorBlack"
                    android:text="@string/no_rek"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:textColor="@color/colorBlack"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:layout_marginBottom="6dp"
                    android:text="@string/an_rek"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_margin"
            android:orientation="horizontal">
                <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:layout_marginStart="50dp"
                    android:background="@drawable/btn_red"
                    android:textColor="@color/colorWhite"
                    android:text="@string/clear_cart"
                    tools:ignore="ButtonStyle" />
                <Button
                    android:id="@+id/btn_finish"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:layout_marginStart="@dimen/horizontal_margin"
                    android:layout_marginEnd="@dimen/horizontal_margin"
                    android:background="@drawable/btn_vio"
                    android:textColor="@color/colorWhite"
                    android:text="@string/finish"
                    tools:ignore="ButtonStyle" />
        </LinearLayout>
        <Button
            android:id="@+id/btn_pay"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="-120dp"
            android:background="@drawable/btn_green"
            android:textColor="@color/colorWhite"
            android:text="@string/payment"/>


    </LinearLayout>

</androidx.core.widget.NestedScrollView>