<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.testimony.DetailTestActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_test"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_marginTop="@dimen/vertical_margin"
            android:layout_gravity="center"
            android:contentDescription="@string/img_pro"
            android:layout_marginBottom="@dimen/vertical_margin"/>
        <TextView
            android:id="@+id/tv_testId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:visibility="invisible"
            android:maxLines="1"
            android:text="@string/testId"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_margin"
            android:layout_marginEnd="@dimen/horizontal_margin"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:textColor="@color/colorBlack"
            android:text="@string/description"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>